<resources>
    <string name="app_name">Movie Browser</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation View-->
    <string name="nav_movies_title">Filmes</string>
    <string name="nav_genres_title">Gêneros</string>
    <string name="nav_favorites_title">Favoritos</string>
    <string name="nav_top10_title">Top 10</string>
    <string name="nav_register_title">Cadastrar</string>
    <string name="nav_logout_title">Sair</string>

    <!--Login screen-->
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="enter">Entrar</string>
    <string name="register_yourself">Ainda não é cadastrado? <u>Cadastre-se</u></string>

</resources>
