<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@mipmap/ic_movie_black"
            android:title="@string/nav_movies_title" />
        <item
            android:id="@+id/nav_movies_by_genre"
            android:icon="@mipmap/ic_movie_filter"
            android:title="@string/nav_genres_title" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@mipmap/ic_favorite_black"
            android:title="@string/nav_favorites_title" />
        <item
            android:id="@+id/nav_top10"
            android:icon="@mipmap/ic_stars_black"
            android:title="@string/nav_top10_title" />
        <item
            android:id="@+id/nav_register"
            android:icon="@mipmap/ic_library_add_black"
            android:title="@string/nav_register_title" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_logout_black"
            android:title="@string/nav_logout_title" />
    </group>

</menu>
